--- a/Kana/Base.lproj/Main.storyboard
+++ b/Kana/Base.lproj/Main.storyboard
@@ -26,28 +26,38 @@
                                 <rect key="frame" x="0.0" y="84" width="375" height="140"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ぢゃ" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wva-Dq-A1c">
-                                        <rect key="frame" x="0.0" y="0.0" width="183.5" height="140"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="119.5" height="140"/>
                                         <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="84"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DTb-Vi-f0c">
+                                        <rect key="frame" x="127.5" y="0.0" width="120" height="140"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <state key="normal" title="Reset">
+                                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="resetPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Eff-Pc-GAI"/>
+                                        </connections>
+                                    </button>
                                     <stackView opaque="NO" contentMode="center" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Iaf-hp-W5u">
-                                        <rect key="frame" x="191.5" y="0.0" width="183.5" height="140"/>
+                                        <rect key="frame" x="255.5" y="0.0" width="119.5" height="140"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Correct!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Spl-Ei-FaN">
-                                                <rect key="frame" x="56.5" y="0.0" width="71" height="46.5"/>
+                                                <rect key="frame" x="24" y="0.0" width="71" height="46.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="あ" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kV0-6T-peA">
-                                                <rect key="frame" x="73.5" y="46.5" width="36.5" height="47"/>
+                                                <rect key="frame" x="41.5" y="46.5" width="36.5" height="47"/>
                                                 <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="36"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="a" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LQ6-mL-pzz">
-                                                <rect key="frame" x="85" y="93.5" width="13.5" height="46.5"/>
+                                                <rect key="frame" x="53" y="93.5" width="13.5" height="46.5"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -62,20 +72,20 @@
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Vfv-6p-b7j">
                                 <rect key="frame" x="64" y="256" width="247" height="56"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="AA" borderStyle="roundedRect" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="M67-YF-ccz">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="..." borderStyle="roundedRect" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="M67-YF-ccz">
                                         <rect key="frame" x="0.0" y="0.0" width="143" height="56"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="24"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tX6-b1-7tL">
-                                        <rect key="frame" x="151" y="7.5" width="96" height="41"/>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tX6-b1-7tL" customClass="MyButton" customModule="Kana" customModuleProvider="target">
+                                        <rect key="frame" x="151" y="0.0" width="96" height="56"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="96" id="M4h-Q1-CLE"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <state key="normal" title="Submit">
-                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
                                             <action selector="submitPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KHv-Wo-o2G"/>
@@ -83,9 +93,11 @@
                                     </button>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="tX6-b1-7tL" firstAttribute="top" secondItem="Vfv-6p-b7j" secondAttribute="top" id="1lM-ge-xxr"/>
                                     <constraint firstAttribute="height" constant="56" id="8Ea-Xb-3fk"/>
                                     <constraint firstAttribute="bottom" secondItem="M67-YF-ccz" secondAttribute="bottom" id="QGV-vi-h0f"/>
                                     <constraint firstItem="M67-YF-ccz" firstAttribute="top" secondItem="Vfv-6p-b7j" secondAttribute="top" id="c4W-eK-3eS"/>
+                                    <constraint firstAttribute="bottom" secondItem="tX6-b1-7tL" secondAttribute="bottom" id="tQf-ke-1fa"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -103,6 +115,7 @@
                     <connections>
                         <outlet property="KanaRomaji" destination="LQ6-mL-pzz" id="syp-4C-eHW"/>
                         <outlet property="KanaText" destination="wva-Dq-A1c" id="xLZ-su-eEm"/>
+                        <outlet property="ResetButton" destination="DTb-Vi-f0c" id="lKv-f3-CCk"/>
                         <outlet property="guessAnswerResult" destination="Spl-Ei-FaN" id="LSd-vF-t0J"/>
                         <outlet property="guessTextField" destination="M67-YF-ccz" id="xHE-G0-s5G"/>
                         <outlet property="kanaAnswerChar" destination="kV0-6T-peA" id="Atj-h7-Pj7"/>
